# Thesis

./: .gitignore  README.md  pyproject.toml
Data/scripts/: DataGetter.ipynb  smoketest.ipynb
artifacts/eval/: test_latents.pt  test_metrics.json
artifacts/eval/surfaces/: grid_spec.json  market_surfaces.npy  vae_surfaces.npy
artifacts/train/: best_model.pt  training_history.json  vae_checkpoint.pt
notebooks/: experiment.ipynb
notebooks/data_prep/: build_heston_inputs.ipynb  pull_heston_inputs.ipynb  pull_vol_surface.ipynb  validate_data.ipynb
notebooks/experiments/: compare_all_models.ipynb  compare_vae_heston.ipynb  cross_ticker_analysis.ipynb  eval_vae.ipynb  experiment.ipynb  heston_calibration.ipynb  hyperparameter_sweep_vae.ipynb  interactive_surfaces.ipynb  model_validation.ipynb  surface_completion.ipynb  test_heston_calibration.ipynb  training_vae.ipynb
notebooks/exploration/: visualization.ipynb
notebooks/tickers/AAPL/: comparison.ipynb  validation.ipynb
notebooks/tickers/CVX/: comparison.ipynb  validation.ipynb
notebooks/tickers/F/: comparison.ipynb  validation.ipynb
notebooks/tickers/GOOGL/: comparison.ipynb  validation.ipynb
notebooks/tickers/NVDA/: comparison.ipynb  validation.ipynb
notebooks/tickers/TSLA/: comparison.ipynb  validation.ipynb
notebooks/tickers/VIX/: comparison.ipynb  validation.ipynb
notebooks/tickers/XOM/: comparison.ipynb  validation.ipynb
scripts/: calibrate_heston.py  compare_surfaces.py  eval_vae.py  prepare_heston_data.py  prepare_vae_data.py  pull_data.py  run_pipeline.py  train_vae.py
src/: config.py
src/data/: __init__.py  dataloaders.py  volsurface_grid.py
src/models/: __init__.py  vae_conv.py  vae_mlp.py
src/models/heston/: __init__.py  bs.py  calibrate.py  pricer.py
src/thesis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/utils/: __init__.py  arbitrage.py  eval.py  masking.py  scaler.py  training.py
thesis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
