[project]
name = "thesis"
version = "0.1.0"
description = "VAE-based Implied Volatility Surface Modeling"
requires-python = ">=3.10"

dependencies = [
  # Core ML
  "torch>=2.0",
  
  # Data handling
  "numpy",
  "pandas",
  "polars",
  "pyarrow",
  
  # Visualization
  "plotly",
  "matplotlib",
  
  # Utilities
  "scikit-learn",
  "tqdm",
  "scipy>=1.10",
  
  # Quantitative finance
  "QuantLib>=1.30",
  
  # Jupyter
  "jupyter",
  "ipykernel",
  "ipywidgets",
  
  # Data source
  "wrds",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
